# winconnect

./: .gitignore  .gitmodules  KDEConnect.sln  README.md  kdeconnect-win.sln
kdeconnect-qt/: CMakeLists.txt  Device.natvis  README.txt  copyright.txt  kdeconnect-qt.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt.conf
kdeconnect-qt/core/: CMakeLists.txt  daemon.cpp  daemon.h  device.cpp  kdeconnectconfig.cpp  kdeconnectplugin.cpp  kdeconnectplugin.h  kdeconnectpluginconfig.cpp
kdeconnect-qt/core/backends/: devicelink.cpp  pairinghandler.h
kdeconnect-qt/core/backends/lan/: CMakeLists.txt  landevicelink.cpp  lanlinkprovider.cpp  lanpairinghandler.h  server.cpp  server.h  socketlinereader.h
kdeconnect-qt/core/backends/loopback/: CMakeLists.txt  loopbacklinkprovider.h
kdeconnect-qt/interfaces/: devicesmodel.h  notificationinterface.h
kdeconnect-qt/plugins/: plugininterface.h  pluginmanager.cpp
kdeconnect-qt/plugins/battery/: CMakeLists.txt  batteryplugininterface.h
kdeconnect-qt/plugins/ping/: CMakeLists.txt  pingplugin.cpp  pingplugin.h
kdeconnect-qt/plugins/test/: testplugina.h
kdeconnect-qt/vstools/: winconnect.natvis
kdeconnect-uwp/: App.xaml  App.xaml.cpp  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  Package.appxmanifest  kdeconnect-uwp.vcxproj  kdeconnect-uwp.vcxproj.filters
kdeconnect-win/: kdeconnect-win.sln
kdeconnect-win/kdeconnect-qt/: CMakeLists.txt  CMakeSettings.json  Doxyfile  README.txt  deploy.bat  kdeconnect-qt.pro  kdeconnect-version.h.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
kdeconnect-win/kdeconnect-qt/cmake/modules/: MyMacros.cmake
kdeconnect-win/kdeconnect-qt/core/: CMakeLists.txt  daemon.cpp  daemon.h  device.cpp  device.h  deviceidhelper.h  kclogger.cpp  kclogger.h  kdeconnectconfig.cpp  kdeconnectconfig.h  kdeconnectplugin.h  kdeconnectpluginconfig.h  logger.cpp  logger.h  networkpackage.cpp  networkpackage.h  udplistener.cpp  udplistener.h
kdeconnect-win/kdeconnect-qt/core/backends/: devicelink.cpp  devicelink.h  linkprovider.h  pairinghandler.h
kdeconnect-win/kdeconnect-qt/core/backends/lan/: CMakeLists.txt  landevicelink.cpp  landevicelink.h  lanlinkprovider.cpp  lanlinkprovider.h  lanpairinghandler.cpp  lanpairinghandler.h  server.cpp  server.h  socketlinereader.h
kdeconnect-win/kdeconnect-qt/core/backends/loopback/: CMakeLists.txt  loopbackdevicelink.cpp  loopbacklinkprovider.cpp
kdeconnect-win/kdeconnect-qt/interfaces/: devicesmodel.cpp  devicesmodel.h
kdeconnect-win/kdeconnect-qt/lib/openssl/openssl-1.0.2j-64bit-debug-DLL-VS2015/include/openssl/: opensslconf.h
kdeconnect-win/kdeconnect-qt/lib/openssl/openssl-1.0.2j-64bit-debug-DLL-VS2015/lib/: libeay32.lib  ssleay32.lib
kdeconnect-win/kdeconnect-qt/lib/qca/: cmake.settings.xml
kdeconnect-win/kdeconnect-qt/lib/qca-vs/: Debug.7z
kdeconnect-win/kdeconnect-qt/lib/qca-vs/lib/: qca-qt5d.exp  qca-qt5d.lib
kdeconnect-win/kdeconnect-qt/lib/qca-vs/lib/cmake/Qca-qt5/: Qca-qt5Config.cmake
kdeconnect-win/kdeconnect-qt/lib/qca-vs/lib/qca-qt5/crypto/: qca-gnupgd.exp  qca-gnupgd.lib  qca-loggerd.exp  qca-loggerd.lib  qca-ossld.exp  qca-ossld.lib  qca-softstored.exp  qca-softstored.lib
kdeconnect-win/kdeconnect-qt/lib/qca-vs/mkspecs/features/: crypto.prf
kdeconnect-win/kdeconnect-qt/lib/qca/lib/: qca-qt5.lib  qca-qt5d.lib
kdeconnect-win/kdeconnect-qt/lib/qca/lib/cmake/Qca-qt5/: Qca-qt5Targets-debug.cmake  Qca-qt5Targets-release.cmake.bak  Qca-qt5Targets.cmake
kdeconnect-win/kdeconnect-qt/lib/qca/mkspecs/features/: crypto.prf
kdeconnect-win/kdeconnect-qt/lib/qca/qca64-debug-dll/include/Qca-qt5/QtCrypto/: qca_version.h
kdeconnect-win/kdeconnect-qt/lib/qca/qca64-debug-dll/libd/: qca-qt5d.lib
kdeconnect-win/kdeconnect-qt/lib/qca/qca64-debug-dll/libd/cmake/Qca-qt5/: Qca-qt5Targets-debug.cmake  Qca-qt5Targets.cmake
kdeconnect-win/kdeconnect-qt/lib/qca/qca64-debug-dll/mkspecs/features/: crypto.prf
kdeconnect-win/kdeconnect-qt/plugins/: CMakeLists.txt  plugin.h  plugininterface.h  pluginmanager.cpp  pluginmanager.h  testplugininterface.h
kdeconnect-win/kdeconnect-qt/plugins/battery/: CMakeLists.txt  batteryplugin.cpp  batteryplugin.h  batteryplugin.json  batteryplugininterface.h
kdeconnect-win/kdeconnect-qt/plugins/ping/: CMakeLists.txt  pingplugin.cpp  pingplugin.h  pingplugin.json  pingplugininterface.h
kdeconnect-win/kdeconnect-qt/plugins/test/: CMakeLists.txt  testPluginA.json  testplugina.cpp  testplugina.h
kdeconnect-win/kdeconnect-qt/res/: resources.qrc
kdeconnect-win/kdeconnect-uwp/: App.xaml.h  MainPage.xaml  MainPage.xaml.h  kdeconnect-uwp.vcxproj  kdeconnect-uwp.vcxproj.filters
kdeconnect-win/kdeconnect-uwp/core/: KdeConnectConfig.h
kdeconnect-win/kdeconnectd-win/: ReadMe.txt  kdeconnectd-win.cpp  kdeconnectd-win.vcxproj
kdeconnectd-win/: AssemblyInfo.cpp  kdeconnectd-win.cpp  kdeconnectd-win.vcxproj.filters  stdafx.cpp
winconnect-qt/: CMakeLists.txt  CMakeSettings.json  winconnect-version.h.in
winconnect-qt/core/: CMakeLists.txt  daemon.cpp  daemon.h  device.cpp  deviceidhelper.cpp  kclogger.cpp  kclogger.h  kdeconnectconfig.h  kdeconnectpluginconfig.cpp  networkpackage.cpp
winconnect-qt/core/backends/lan/: landevicelink.h  lanpairinghandler.cpp
winconnect-qt/core/backends/loopback/: loopbackdevicelink.h
winconnect-qt/interfaces/: devicesmodel.cpp  notificationinterface.cpp
winconnect-qt/plugins/: CMakeLists.txt  pluginmanager.cpp  pluginmanager.h
winconnect-qt/plugins/battery/: CMakeLists.txt
winconnect-qt/plugins/ping/: CMakeLists.txt  pingplugin.cpp  pingplugin.h  pingplugininterface.h
winconnect-qt/plugins/test/: CMakeLists.txt  testpluginainterface.h
winconnect-qt/res/: resources.qrc
winconnect-qt/vstools/: winconnect.natvis
